src/snapshots/gpui_markup__codegen__tests__anchored.snap
---
source: src/codegen.rs
expression: "generate(quote::quote!\n{ anchored @[position: Point::default()] { div { \"Tooltip\" }, } })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = anchored().position(Point::default());
        let __child = {
            let __gpui_markup_element = div();
            let __child = "Tooltip";
            let __gpui_markup_element = gpui::ParentElement::child(
                __gpui_markup_element,
                __child,
            );
            __gpui_markup_element
        };
        let __gpui_markup_element = gpui::ParentElement::child(
            __gpui_markup_element,
            __child,
        );
        __gpui_markup_element
    }
}
