src/snapshots/gpui_markup__codegen__tests__complex_nested.snap
---
source: src/codegen.rs
expression: "generate(quote::quote!\n{\n    div @[flex, flex_col]\n    {\n        div @[text_size: px(16.0)] { \"Hello World\", }, div\n        @[bg: theme.secondary] { (Header::new()), },\n    }\n})"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div().flex().flex_col();
        let __child = {
            let __gpui_markup_element = div().text_size(px(16.0));
            let __child = "Hello World";
            let __gpui_markup_element = gpui::ParentElement::child(
                __gpui_markup_element,
                __child,
            );
            __gpui_markup_element
        };
        let __gpui_markup_element = gpui::ParentElement::child(
            __gpui_markup_element,
            __child,
        );
        let __child = {
            let __gpui_markup_element = div().bg(theme.secondary);
            let __child = (Header::new());
            let __gpui_markup_element = gpui::ParentElement::child(
                __gpui_markup_element,
                __child,
            );
            __gpui_markup_element
        };
        let __gpui_markup_element = gpui::ParentElement::child(
            __gpui_markup_element,
            __child,
        );
        __gpui_markup_element
    }
}
