src/snapshots/gpui_markup__codegen__tests__component.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { Header {} })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = Header::new();
        __gpui_markup_element
    }
}
