src/snapshots/gpui_markup__codegen__tests__component_nested.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div { Header @[flex] {}, Footer {}, } })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div();
        let __child = {
            let __gpui_markup_element = Header::new().flex();
            __gpui_markup_element
        };
        let __gpui_markup_element = gpui::ParentElement::child(
            __gpui_markup_element,
            __child,
        );
        let __child = {
            let __gpui_markup_element = Footer::new();
            __gpui_markup_element
        };
        let __gpui_markup_element = gpui::ParentElement::child(
            __gpui_markup_element,
            __child,
        );
        __gpui_markup_element
    }
}
