src/snapshots/gpui_markup__codegen__tests__component_with_attrs.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { Header @[flex, style: Primary] {} })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = Header::new().flex().style(Primary);
        __gpui_markup_element
    }
}
