src/snapshots/gpui_markup__codegen__tests__div_with_flag_attribute.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div @[flex] {} })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div().flex();
        __gpui_markup_element
    }
}
