src/snapshots/gpui_markup__codegen__tests__div_with_key_value_attribute.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div @[w: px(200.0)] {} })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div().w(px(200.0));
        __gpui_markup_element
    }
}
