src/snapshots/gpui_markup__codegen__tests__div_with_mixed_attributes.snap
---
source: src/codegen.rs
expression: "generate(quote::quote! { div @[flex, w: px(200.0), bg: theme.secondary] {} })"
---
fn __wrapper() {
    {
        let __gpui_markup_element = div().flex().w(px(200.0)).bg(theme.secondary);
        __gpui_markup_element
    }
}
